# mini

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: clist.rs
src/: clist.rs  display.rs  lib.rs  main.rs
src/engine/: mod.rs  writing.rs
